--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "name": "angular-sortable",
     "version": "0.0.2",
     "description": "Angular.js implementation of sortable as a directive.",
-    "main": ["./angular-sortable.js", "./angular-sortable.css"],
+    "main": ["./dist/js/angular-sortable.js", "./dist/css/angular-sortable.css"],
     "repository": {
         "type": "git",
         "url": "git@github.com:schartier/angular-sortable.git"
