--- a/package.json
+++ b/package.json
@@ -1,34 +1,44 @@
 {
-    "ignore": [
-        "**/.*"
-    ],
-    "name": "angular-sortable",
-    "version": "0.0.2",
-    "description": "Angular.js implementation of sortable as a directive.",
-    "main": ["./dist/js/angular-sortable.js", "./dist/css/angular-sortable.css"],
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:schartier/angular-sortable.git"
-    },
-    "author": "Sebastien Chartier",
-    "license": "GPL v2",
-    "readmeFilename": "README.md",
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-cli": "~0.1.9",
-        "grunt-contrib-clean": "~0.4.1",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-compress": "~0.5.0",
-        "grunt-contrib-copy": "~0.4.1",
-        "grunt-contrib-jshint": "~0.5.3",
-        "grunt-contrib-watch": "~0.4.3",
-        "grunt-contrib-uglify": "~0.2.0",
-        "grunt-replace": "~0.4.4",
-        "grunt-contrib-connect": "~0.4.0",
-        "grunt-contrib-jade": "~0.8.0",
-        "grunt-contrib-cssmin": "~0.6.1",
-        "marked": "~0.2.9",
-        "grunt-jsdoc": "~0.4.1",
-        "grunt-shell": "~0.5.0"
-    }
+  "ignore": [
+    "**/.*"
+  ],
+  "name": "angular-sortable",
+  "version": "0.0.2",
+  "description": "Angular.js implementation of sortable as a directive.",
+  "main": [
+    "./dist/js/angular-sortable.js",
+    "./dist/css/angular-sortable.css"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:schartier/angular-sortable.git"
+  },
+  "author": "Sebastien Chartier",
+  "license": "GPL v2",
+  "readmeFilename": "README.md",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.9",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-compress": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.4.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-contrib-jade": "~0.8.0",
+    "grunt-contrib-jshint": "~0.5.3",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "~0.4.3",
+    "grunt-jsdoc": "~0.4.1",
+    "grunt-protractor-runner": "^1.1.4",
+    "grunt-replace": "~0.4.4",
+    "grunt-shell": "~0.5.0",
+    "marked": "~0.2.9",
+    "protractor": "1.0.0",
+    "load-grunt-tasks": "^0.4.0",
+    "time-grunt": "^0.3.1"
+  },
+  "scripts": {
+    "install": "./node_modules/protractor/bin/webdriver-manager update"
+  }
 }
