--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,17 @@
 {
   "name": "angular-sortable",
   "version": "0.0.2",
-  "main": ["./angular-sortable.js", "./angular-sortable.css"],
+  "main": ["./dist/js/angular-sortable.js", "./dist/css/angular-sortable.css"],
   "ignore": [
     "**/.*"
   ],
   "dependencies": {
-  }
+    "angular": "1.2.22",
+    "jquery": "~2.1.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.2.22",
+    "angular-scenario": "1.2.22"
+  },
+  "appPath": ""
 }
