--- a/package.json
+++ b/package.json
@@ -20,20 +20,18 @@
     "grunt": "~0.4.1",
     "grunt-cli": "~0.1.9",
     "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-compress": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.4.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.6.1",
-    "grunt-contrib-jade": "~0.8.0",
     "grunt-contrib-jshint": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.4.3",
-    "grunt-jsdoc": "~0.4.1",
     "grunt-protractor-runner": "^1.1.4",
-    "grunt-replace": "~0.4.4",
-    "grunt-shell": "~0.5.0",
-    "marked": "~0.2.9",
+    "grunt-karma": "^0.8.3",
+    "karma": "^0.12.21",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-jasmine": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.1.4",    
     "protractor": "1.0.0",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
