--- a/package.json
+++ b/package.json
@@ -26,15 +26,22 @@
     "grunt-contrib-jshint": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.4.3",
+    "grunt-karma": "^0.9.0",
     "grunt-protractor-runner": "^1.1.4",
-    "grunt-karma": "^0.8.3",
-    "karma": "^0.12.21",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "^0.2.0",
-    "karma-phantomjs-launcher": "^0.1.4",    
-    "protractor": "1.0.0",
+    "karma": "^0.12.24",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-coverage": "^0.2.6",
+    "karma-coveralls": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.2",
+    "karma-script-launcher": "^0.1.0",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "protractor": "1.0.0",
+    "requirejs": "^2.1.15",
+    "time-grunt": "^0.3.1",
+    "wiredep": "^1.8.5"
   },
   "scripts": {
     "install": "./node_modules/protractor/bin/webdriver-manager update"
