--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,11 @@
     "**/.*"
   ],
   "dependencies": {
-    "bootstrap": "~3.1.1",
-    "angular": "1.2.22",
+    "angular": "~1.2.22",
     "jquery": "~2.1.1"
   },
   "devDependencies": {
+    "bootstrap": "~3.1.1",
     "angular-mocks": "1.2.22",
     "angular-scenario": "1.2.22"
   },
